<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_qlphieuthu">

    <fragment
        android:id="@+id/nav_qlphieuthu"
        android:name="com.example.thuvienphuongnam.main.ui.qlphieumuon"
        android:label="@string/menu_qlphieumuon"
        tools:layout="@layout/fragment_qlphieumuon" />

    <fragment
        android:id="@+id/nav_qlloaisach"
        android:name="com.example.thuvienphuongnam.main.ui.qlloaisach"
        android:label="@string/menu_qlloaisach"
        tools:layout="@layout/fragment_qlloaisach" />

    <fragment
        android:id="@+id/nav_quanlysach"
        android:name="com.example.thuvienphuongnam.main.ui.qlsach"
        android:label="@string/menu_qlsach"
        tools:layout="@layout/fragment_qlsach" />
    <fragment
        android:id="@+id/nav_qlthanhvien"
        android:name="com.example.thuvienphuongnam.main.ui.qlthanhvien"
        android:label="@string/menu_qlthanhvien"
        tools:layout="@layout/fragment_qlthanhvien" />

    <fragment
        android:id="@+id/nav_top"
        android:name="com.example.thuvienphuongnam.main.ui.top"
        android:label="@string/menu_top"
        tools:layout="@layout/fragment_top" />

    <fragment
        android:id="@+id/nav_doanhthu"
        android:name="com.example.thuvienphuongnam.main.ui.doanhthu"
        android:label="@string/menu_doanhthu"
        tools:layout="@layout/fragment_doanhthu" />

    <fragment
        android:id="@+id/nav_them"
        android:name="com.example.thuvienphuongnam.main.ui.them"
        android:label="@string/menu_themnguoidung"
        tools:layout="@layout/fragment_them" />

    <fragment
        android:id="@+id/nav_matkhau"
        android:name="com.example.thuvienphuongnam.main.ui.matkhau"
        android:label="@string/menu_matkhau"
        tools:layout="@layout/fragment_matkhau" />

    <fragment
        android:id="@+id/nav_dangxuat"
        android:name="com.example.thuvienphuongnam.main.ui.dangxuat"
        android:label="@string/menu_dangxuat"
        tools:layout="@layout/fragment_dangxuat" />

</navigation>